observability/thanos/receiver-write-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: receiver-write
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 10908
      targetPort: remote-write
      protocol: TCP
      name: remote-write
  selector:
    app.kubernetes.io/name: receiver
