observability/thanos/querier_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: querier
  namespace: monitoring
    #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: querier
           port:
             name: http
